--- a/src/less/crt/crt.less
+++ b/src/less/crt/crt.less
@@ -46,11 +46,11 @@
 .output {
   //animation: crt-output 10ms infinite; 
   background-color: @console-bg;
-  overflow-y: auto;
-  -ms-overflow-style: none;
   position: absolute;
   pointer-events: auto;
   text-shadow: 0rem 0.2rem 1rem lighten(@console-bg,20%);
+  overflow-y: auto;
+  .hide-scrollbar();
 }
 
 @keyframes crt-output {
