--- a/src/less/crt/medialist/explorer.less
+++ b/src/less/crt/medialist/explorer.less
@@ -214,8 +214,7 @@
 		height:100%;
 		width:100%;
 		overflow-y: auto;
-  	    -ms-overflow-style: none;
-  	    -webkit-overflow-scrolling: touch;	
+ 	   .hide-scrollbar();
 	}
 
 	ul.tags {
